--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
   margin:0;
   padding: 0;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 html::-webkit-scrollbar {
   display: none;
+}
+a{
+  text-decoration: none;
+  color: black;
+  outline: none;
 }
