--- a/src/pages/AuthPage/Auth.css
+++ b/src/pages/AuthPage/Auth.css
@@ -1,9 +1,15 @@
+.formcontainer{
+    padding: 20px 0;
+    display: flex;
+    width: 100vw;
+    height: fit-content;
+    justify-content: center;
+}
+
 .auth-page{
     width: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    
+    
     text-align: center;
 
 }
@@ -16,6 +22,8 @@
 }
 .auth-page input[type="text"],
 .auth-page input[type="email"],
+.auth-page input[type="number"],
+.auth-page input[type="file"],
 .auth-page input[type="password"]{
     display: block;
     margin-bottom: 1.5rem;
